# gray-scott-sim-G18

./: .gitignore  CMakeLists.txt  README.md  checks.h  ci.yml  gs.cpp  gs.h  tests.cpp  tests.h
.github/workflows/: CI.yml  cmake-multi-platform.yml
test/: zero_u.txt
